--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,8 @@
   outline: 1px solid #f00 !important;
 } */
 
-#reverse__even > div:nth-child(2n) {
-  flex-direction: row-reverse;
+@media screen and (min-width: 1024px) {
+  #reverse__even > div:nth-child(2n) {
+    flex-direction: row-reverse;
+  }
 }
