--- a/app/globals.css
+++ b/app/globals.css
@@ -27,3 +27,7 @@ input[type="number"] {
     flex-direction: row-reverse;
   }
 }
+
+#no-mobile-effect {
+  -webkit-tap-highlight-color: transparent;
+}
